[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/Resource/Vector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/ScriptGridEx/Nodes/Snapped_instance.gd" type="Script" id=2]
[ext_resource path="res://Script/Class/AnimationButtonClass.gd" type="Script" id=3]

[node name="Snapped_instance" type="GraphNode"]
margin_right = 196.0
margin_bottom = 145.0
mouse_filter = 1
title = "Snapped_instance"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="Settings" type="Node" parent="."]

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 21.0
margin_right = 213.0
margin_bottom = 121.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vector" parent="Panel" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 131.0
margin_right = 213.0
margin_bottom = 195.0

[node name="Vbox" type="VBoxContainer" parent="Options"]
margin_left = 3.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 57.0

[node name="Delete_duplicate" type="CheckBox" parent="Options/Vbox"]
margin_right = 197.0
margin_bottom = 24.0
text = "Delete duplicate"
script = ExtResource( 3 )

[node name="Include_group" type="CheckBox" parent="Options/Vbox"]
margin_top = 28.0
margin_right = 197.0
margin_bottom = 52.0
text = "include in group"
script = ExtResource( 3 )

[connection signal="connected" from="." to="." method="_on_Snapped_connected"]
[connection signal="disconnect_from" from="." to="." method="_on_Snapped_instance_disconnect_from"]
[connection signal="disconnect_to" from="." to="." method="_on_Snapped_disconnect_to"]
[connection signal="from_value" from="." to="." method="_on_Snapped_from_value"]
[connection signal="pressed" from="Options/Vbox/Delete_duplicate" to="." method="_on_Delete_duplicate_pressed"]
[connection signal="pressed" from="Options/Vbox/Include_group" to="." method="_on_Include_group_pressed"]
